--- a/public/index.html
+++ b/public/index.html
@@ -32,16 +32,16 @@
         dataLayer.push(arguments);
       }
     </script>
-    <title>Free Modern React Templates &amp; Components for building landing pages and UIs - Treact</title>
+    <title>Cofoods Processor</title>
     <meta
       name="description"
-      content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
+      content="17 years of industry experience of design and development of softwares in Banking and Finance domain. Experties in Application modernization, digital transformation and Cloud native Application design."
     />
-    <meta property="og:site_name" content="Treact" />
-    <meta property="og:title" content="Free Modern React Templates and Components for Building Landing Pages" />
+    <meta property="og:site_name" content="CofoodsProcessor" />
+    <meta property="og:title" content="Cofoods Processor" />
     <meta
       property="og:description"
-      content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
+      content="17 years of industry experience of design and development of softwares in Banking and Finance domain. Experties in Application modernization, digital transformation and Cloud native Application design."
     />
     <meta
       property="og:image"
@@ -49,12 +49,12 @@
     />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@owaiswiz" />
-    <meta name="twitter:creator" content="@owaiswiz" />
-    <meta name="twitter:title" content="Free Modern React Templates and Components for Building Landing Pages" />
+    <meta name="twitter:site" content="@ptalele2" />
+    <meta name="twitter:creator" content="@ptalele2" />
+    <meta name="twitter:title" content="CofoodsProcessor" />
     <meta
       name="twitter:description"
-      content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
+      content="17 years of industry experience of design and development of softwares in Banking and Finance domain. Experties in Application modernization, digital transformation and Cloud native Application design. "
     />
     <meta name="twitter:image"
     content="https://treact.owaiskhan.me/react-landing-pages-and-components-free-tailwindcss-twitter.png" />
